expo-push-notification-template

--- a/app.json
+++ b/app.json
@@ -5,8 +5,9 @@
     "name": "notification",
     "slug": "notification",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"],
+    "android": {
+      "useNextNotificationsApi": true
+    }
   }
 }
