--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
     "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-notifications": "~0.3.3",
+    "expo-permissions": "~9.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
